# mcp-foundry

./: README.md  mcp.json  pyproject.toml
src/mcp_foundry/: __main__.py
src/mcp_foundry/mcp_foundry_model/: tools.py  utils.py
src/python/azure_model_mcp_server/: README.md  __init__.py  __main__.py  pyproject.toml
tests/: test_mcp.py  utils.py
