[project]
name = "mcp-foundry"
version = "0.1.0"
description = "MCP Server for Azure AI Foundry (experimental)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.8.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
run-azure-ai-foundry-mcp = "mcp_foundry.__main__:main"
