[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-model-mcp-server"
version = "0.1.0"
description = "Azure AI Model Service MCP Server"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "mcp[cli]~=1.4.1",
    "httpx",
    "jinja2",
    "azure-cli>=2.70.0",
]
